--- a/rules
+++ b/rules
@@ -137,6 +137,7 @@ install: build
 	
 	install -m 755 debian/local/xvfb-run debian/tmp/usr/bin
 	install debian/local/xvfb-run.1 debian/tmp/usr/share/man/man1
+	install debian/local/xserver-xephyr.1 debian/tmp/usr/share/man/man1
 
 
 # stub to start building deb files, used by binary-indep and binary-arch
