--- a/control
+++ b/control
@@ -22,7 +22,7 @@ Build-Depends: debhelper (>= 4.0.0), lsb-release, pkg-config, bison, flex,
  x11proto-input-dev (>= 1.5), x11proto-dri2-dev (>= 1.99.3),
  libxdmcp-dev (>= 1:0.99.1), libxfont-dev, libfontenc-dev,
  libxkbfile-dev (>= 1:0.99.1), libpixman-1-dev (>= 0.13.2),
- libpciaccess-dev, libssl-dev,
+ libpciaccess-dev, libgcrypt-dev,
  x11proto-xf86dri-dev, libdrm-dev (>= 2.4.3) [!hurd-i386], 
  x11proto-print-dev, libfreetype6-dev, xfonts-utils,
  x11proto-gl-dev (>= 1.4.9), libgl1-mesa-dev (>= 7.2+git20081209.a0d5c3cf),
