--- a/control
+++ b/control
@@ -8,32 +8,73 @@ Uploaders: David Nusinow <dnusinow@debian.org>, Steve Langasek <vorlon@debian.or
 # x11proto-xf86dri-dev and libdrm-dev are for DRI support for the Xorg server.
 # x11proto-print-dev and libfreetype6-dev are for Xprint
 # everything on is for the DMX and Xnest servers.
-Build-Depends: debhelper (>= 4.0.0), lsb-release, pkg-config, bison, flex,
- automake, libtool, xutils-dev,
- x11proto-bigreqs-dev, x11proto-composite-dev (>= 1:0.4), 
+Build-Depends:
+ debhelper (>= 4.0.0),
+ lsb-release,
+ pkg-config,
+ bison,
+ flex,
+ automake,
+ libtool,
+ xutils-dev,
+ x11proto-bigreqs-dev,
+ x11proto-composite-dev (>= 1:0.4), 
  x11proto-core-dev (>= 7.0.13),
- x11proto-damage-dev (>= 1.1), x11proto-evie-dev, x11proto-fixes-dev (>= 4.0),
- x11proto-kb-dev (>= 1.0.3), x11proto-xinerama-dev, x11proto-randr-dev (>= 1.2.99.3),
- x11proto-record-dev, x11proto-render-dev (>= 2:0.9.3), x11proto-resource-dev,
- x11proto-scrnsaver-dev, x11proto-trap-dev, x11proto-video-dev,
- x11proto-xcmisc-dev, x11proto-xext-dev (>= 7.0.3),
- x11proto-xf86bigfont-dev, x11proto-xf86dga-dev, x11proto-xf86misc-dev,
- x11proto-xf86vidmode-dev, xtrans-dev (>= 1.2.2), libxau-dev (>= 1:0.99.1),
- x11proto-input-dev (>= 1.5), x11proto-dri2-dev (>= 1.99.3),
- libxdmcp-dev (>= 1:0.99.1), libxfont-dev, libfontenc-dev,
- libxkbfile-dev (>= 1:0.99.1), libpixman-1-dev (>= 0.13.2),
- libpciaccess-dev, libgcrypt-dev,
- x11proto-xf86dri-dev, libdrm-dev (>= 2.4.3) [!hurd-i386], 
- x11proto-print-dev, libfreetype6-dev, xfonts-utils,
- x11proto-gl-dev (>= 1.4.9), libgl1-mesa-dev (>= 7.2+git20081209.a0d5c3cf),
- libxmuu-dev (>= 1:0.99.1), libxext-dev (>= 1:0.99.1),
- libx11-dev (>= 1:0.99.2), libxrender-dev (>= 1:0.9.0),
- libxi-dev (>= 1:0.99.1), x11proto-dmx-dev, quilt, libdmx-dev (>= 1:1.0.1),
- libxpm-dev (>= 1:3.5.3), libxaw7-dev (>= 1:0.99.1),
- libxt-dev (>= 1:0.99.1), libxmu-dev (>= 1:0.99.1),
- libxtst-dev (>= 1:0.99.1), libxres-dev (>= 1:0.99.1),
- libxfixes-dev (>= 1:3.0.0), libdbus-1-dev [!hurd-i386],
- libhal-dev [!hurd-i386], libxv-dev, mesa-common-dev (>= 7.2+git20081209.a0d5c3cf),
+ x11proto-damage-dev (>= 1.1),
+ x11proto-evie-dev,
+ x11proto-fixes-dev (>= 4.0),
+ x11proto-kb-dev (>= 1.0.3),
+ x11proto-xinerama-dev,
+ x11proto-randr-dev (>= 1.2.99.3),
+ x11proto-record-dev,
+ x11proto-render-dev (>= 2:0.9.3),
+ x11proto-resource-dev,
+ x11proto-scrnsaver-dev,
+ x11proto-trap-dev,
+ x11proto-video-dev,
+ x11proto-xcmisc-dev,
+ x11proto-xext-dev (>= 7.0.3),
+ x11proto-xf86bigfont-dev,
+ x11proto-xf86dga-dev,
+ x11proto-xf86misc-dev,
+ x11proto-xf86vidmode-dev,
+ xtrans-dev (>= 1.2.2),
+ libxau-dev (>= 1:0.99.1),
+ x11proto-input-dev (>= 1.5),
+ x11proto-dri2-dev (>= 1.99.3),
+ libxdmcp-dev (>= 1:0.99.1),
+ libxfont-dev,
+ libfontenc-dev,
+ libxkbfile-dev (>= 1:0.99.1),
+ libpixman-1-dev (>= 0.13.2),
+ libpciaccess-dev,
+ libgcrypt-dev,
+ x11proto-xf86dri-dev,
+ libdrm-dev (>= 2.4.3) [!hurd-i386], 
+ x11proto-print-dev,
+ libfreetype6-dev,
+ xfonts-utils,
+ x11proto-gl-dev (>= 1.4.9),
+ libgl1-mesa-dev (>= 7.2+git20081209.a0d5c3cf),
+ libxmuu-dev (>= 1:0.99.1),
+ libxext-dev (>= 1:0.99.1),
+ libx11-dev (>= 1:0.99.2),
+ libxrender-dev (>= 1:0.9.0),
+ libxi-dev (>= 1:0.99.1),
+ x11proto-dmx-dev,
+ quilt,
+ libdmx-dev (>= 1:1.0.1),
+ libxpm-dev (>= 1:3.5.3),
+ libxaw7-dev (>= 1:0.99.1),
+ libxt-dev (>= 1:0.99.1),
+ libxmu-dev (>= 1:0.99.1),
+ libxtst-dev (>= 1:0.99.1),
+ libxres-dev (>= 1:0.99.1),
+ libxfixes-dev (>= 1:3.0.0),
+ libdbus-1-dev [!hurd-i386],
+ libhal-dev [!hurd-i386],
+ libxv-dev,
+ mesa-common-dev (>= 7.2+git20081209.a0d5c3cf),
  libxinerama-dev
 Build-Conflicts: xlibs-static-dev
 Standards-Version: 3.7.3
