--- a/control
+++ b/control
@@ -73,6 +73,8 @@ Build-Depends:
  libxfixes-dev (>= 1:3.0.0),
  libdbus-1-dev [!hurd-i386],
  libhal-dev [!hurd-i386],
+ libselinux1-dev [alpha amd64 arm armeb armel hppa i386 ia64 lpia m32r m68k mips mipsel powerpc ppc64 s390 s390x sh3 sh3eb sh4 sh4eb sparc],
+ libaudit-dev [alpha amd64 arm armeb armel hppa i386 ia64 lpia m32r m68k mips mipsel powerpc ppc64 s390 s390x sh3 sh3eb sh4 sh4eb sparc],
  libxv-dev,
  mesa-common-dev (>= 7.2+git20081209.a0d5c3cf),
  libxinerama-dev
