Move -dbg package to new section debug, add ${misc:Depends} where missing.

--- a/control
+++ b/control
@@ -256,8 +256,9 @@ Description: Linux framebuffer device tiny X server
 
 Package: xserver-xorg-core-dbg
 Architecture: any
-Depends: xserver-xorg-core (= ${binary:Version})
+Depends: xserver-xorg-core (= ${binary:Version}), ${misc:Depends}
 Priority: extra
+Section: debug
 Description: Xorg - the X.Org X server (debugging symbols)
  The Xorg X server is an X server for several architectures and operating
  systems, which is derived from the XFree86 4.x series of X servers.
@@ -270,7 +271,7 @@ Description: Xorg - the X.Org X server (debugging symbols)
 
 Package: xserver-common
 Architecture: all
-Depends: x11-common
+Depends: x11-common, ${misc:Depends}
 Replaces: xserver-xorg-core (<< 2:1.5.2)
 Description: common files used by various X servers
  This package provides files necessary for all X.Org based X servers.
