Disable SELinux support for now, because libaudit-dev needs to be moved to main first.

--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ endif
 
 ifeq ($(DEB_HOST_ARCH_OS), linux)
 	build_xfbdev = --enable-xfbdev
-	selinux = --enable-xselinux
+	selinux = --disable-xselinux
 else
 	build_xfbdev = --disable-xfbdev
 	selinux = --disable-xselinux
