--- a/control
+++ b/control
@@ -80,8 +80,8 @@ Vcs-Browser: http://git.debian.org/?p=pkg-xorg/xserver/xorg-server.git
 Package: xserver-xorg-core
 Architecture: any
 Depends: xserver-common (>> 7), ${shlibs:Depends}, ${misc:Depends}, xserver-xorg
-Recommends: xkb-data, xfonts-base, libgl1-mesa-dri (>= 7.1~rc1)
-Suggests: xfonts-100dpi | xfonts-75dpi, xfonts-scalable
+Recommends: xkb-data, libgl1-mesa-dri (>= 7.1~rc1)
+Suggests: xfonts-base, xfonts-100dpi | xfonts-75dpi, xfonts-scalable
 Conflicts: xserver-xorg (<< 6.8.2-38), xserver-xfree86 (<< 1:7.0.0),
  xserver-xorg-video, xserver-common (<< 7), xserver-xorg-video-1.0, xserver-xorg-input,
  xserver-xorg-video-1.9, xserver-xorg-input-wacom (<< 0.7.8),
@@ -96,13 +96,6 @@ Description: Xorg X server - core server
  .
  The Xorg server supports most modern graphics hardware from most vendors,
  and supersedes all XFree86 X servers.
- .
- The Xorg server either needs fonts installed on the local host, or needs to
- know of a remote hosts that provides font services (with xfs, for instance).
- The former means that fonts packages are mandatory. The latter means that
- font packages may be gratuitous. To err on the side of caution, install at
- least the xfonts-base, xfonts-100dpi or xfonts-75dpi, and xfonts-scalable
- packages.
  .
  More information about X.Org can be found at:
  <URL:http://www.X.org>
@@ -198,7 +191,7 @@ Description: Nested X server
 Package: xvfb
 Architecture: any
 Depends: xserver-common, ${shlibs:Depends}, ${misc:Depends}
-Recommends: xauth, xfonts-base
+Recommends: xauth
 Description: Virtual Framebuffer 'fake' X server
  Xvfb provides an X server that can run on machines with no display hardware
  and no physical input devices. It emulates a dumb framebuffer using virtual
@@ -225,7 +218,7 @@ Description: Virtual Framebuffer 'fake' X server
 Package: xserver-xephyr
 Architecture: any
 Depends: xserver-common, ${shlibs:Depends}, ${misc:Depends}
-Recommends: xbase-clients, xfonts-base, libgl1-mesa-dri (>= 7.1~rc1)
+Recommends: xbase-clients, libgl1-mesa-dri (>= 7.1~rc1)
 Description: nested X server
  Xephyr is an X server that can be run inside another X server,
  much like Xnest. It is based on the kdrive X server, and as a
@@ -242,7 +235,7 @@ Description: nested X server
 Package: xserver-xfbdev
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 lpia m32r m68k mips mipsel powerpc ppc64 sh3 sh3eb sh4 sh4eb sparc
 Depends: xserver-common, ${shlibs:Depends}, ${misc:Depends}
-Recommends: xbase-clients, xfonts-base
+Recommends: xbase-clients
 Description: Linux framebuffer device tiny X server
  xserver-xfbdev is a Linux framebuffer device tiny X server based on the
  kdrive X server.
