Pull doko's changes

--- a/control
+++ b/control
@@ -225,7 +225,9 @@ Depends:
  xserver-common (>= ${source:Version}),
  ${shlibs:Depends},
  ${misc:Depends},
-Recommends: xauth
+ xauth,
+ x11-xkb-utils
+Recommends: libgl1-mesa-dri
 Description: Virtual Framebuffer 'fake' X server
  Xvfb provides an X server that can run on machines with no display hardware
  and no physical input devices. It emulates a dumb framebuffer using virtual
