--- a/xserver-xorg-core.postinst.in
+++ b/xserver-xorg-core.postinst.in
@@ -13,6 +13,13 @@ case "$1" in
     remove_conffile_commit /etc/X11/xserver/SecurityPolicy
     rmdir /etc/X11/xserver 2>/dev/null || true
   fi
+
+  # Use alternatives to make it easier to switch between X11 and 3rd party modules
+  update-alternatives \
+    --install /etc/ld.so.conf.d/GL.conf gl_conf /usr/lib/standard-x11/ld.so.conf 500 \
+    --slave /usr/lib/xorg/modules/extensions/libdri.so libdri.so /usr/lib/xorg/modules/extensions/standard/libdri.so \
+    --slave /usr/lib/xorg/modules/extensions/libglx.so libglx.so /usr/lib/xorg/modules/extensions/standard/libglx.so \
+    --slave /etc/X11/XvMCConfig xvmcconfig /usr/lib/XvMCConfig-alt
 esac
 
 #DEBHELPER#
