--- a/debian/xserver-xorg-core.postinst.in
+++ b/debian/xserver-xorg-core.postinst.in
@@ -19,7 +19,7 @@ case "$1" in
     --install /etc/ld.so.conf.d/GL.conf gl_conf /usr/lib/standard-x11/ld.so.conf 500 \
     --slave /usr/lib/xorg/modules/extensions/libdri.so libdri.so /usr/lib/xorg/modules/extensions/standard/libdri.so \
     --slave /usr/lib/xorg/modules/extensions/libglx.so libglx.so /usr/lib/xorg/modules/extensions/standard/libglx.so \
-    --slave /etc/X11/XvMCConfig xvmcconfig /usr/lib/XvMCConfig-alt
+    --slave /usr/lib/XvMCConfig xvmcconfig /usr/lib/xvmcconfig-standard/XvMCConfig
 esac
 
 #DEBHELPER#
