debian/rules: Adjust confflag targets so xcsecurity isn't enabled for udeb with disabled xace.

--- a/debian/rules
+++ b/debian/rules
@@ -97,7 +97,6 @@ confflags += \
 	     --disable-install-libxf86config \
 	     --enable-mitshm \
 	     --enable-xres \
-	     --enable-xcsecurity \
 	     --disable-xcalibrate \
 	     --disable-tslib \
 	     --disable-multibuffer \
@@ -126,6 +125,7 @@ confflags_main = \
 	--enable-xdm-auth-1 \
 	--enable-glx \
 	$(dri) \
+	--enable-xcsecurity \
 	--enable-xinerama \
 	--enable-xf86vidmode \
 	--enable-xace \
@@ -151,6 +151,7 @@ confflags_udeb = \
 	--disable-xvmc \
 	--enable-dga \
 	--disable-screensaver \
+	--disable-xcsecurity \
 	--disable-xdmcp \
 	--disable-xdm-auth-1 \
 	--disable-glx \
