--- a/control
+++ b/control
@@ -107,7 +107,7 @@ Breaks:
  xserver-xorg-input-7,
  xserver-xorg-input-wacom (<< 0.7.8),
  xserver-xorg-input-joystick (<= 1:1.5.0-3),
- xserver-xorg-input-synaptics (<= 1.2.2-1),
+ xserver-xorg-input-synaptics (<= 1.2.2-1ubuntu4),
  xserver-xorg-input-tslib (<= 0.0.6-3),
  xserver-xorg-input-vmmouse (<= 1:12.6.5-4),
  xserver-xorg-input-wacom (<= 0.10.5+20100415-1),
