--- a/control
+++ b/control
@@ -109,7 +109,7 @@ Breaks:
  xserver-xorg-input-joystick (<= 1:1.5.0-3),
  xserver-xorg-input-synaptics (<= 1.2.2-1ubuntu4),
  xserver-xorg-input-tslib (<= 0.0.6-3),
- xserver-xorg-input-vmmouse (<= 1:12.6.5-4),
+ xserver-xorg-input-vmmouse (<= 1:12.6.5-4ubuntu2),
  xserver-xorg-input-wacom (<= 0.10.5+20100415-1),
 Provides:
  xserver,
