--- a/rules
+++ b/rules
@@ -320,7 +320,7 @@ binary-indep: build install
 	$(MAKE) -f debian/rules DH_OPTIONS=-i binary-initial
 	dh_install -i --sourcedir=debian/tmp
 	dh_installdocs -i
-	dh_installchangelogs -i ChangeLog
+	dh_installchangelogs -i
 
 	$(MAKE) -f debian/rules DH_OPTIONS=-i binary-deb
 
