--- a/rules
+++ b/rules
@@ -108,7 +108,8 @@ confflags += \
 	     --disable-xquartz \
 	     --disable-xwin \
 	     --disable-xfake \
-	     --disable-install-setuid
+	     --disable-install-setuid \
+	     --enable-gestures
 
 confflags_main = \
 	--with-default-font-path="/usr/share/fonts/X11/misc,/usr/share/fonts/X11/cyrillic,/usr/share/fonts/X11/100dpi/:unscaled,/usr/share/fonts/X11/75dpi/:unscaled,/usr/share/fonts/X11/Type1,/usr/share/fonts/X11/100dpi,/usr/share/fonts/X11/75dpi,/var/lib/defoma/x-ttcidfont-conf.d/dirs/TrueType,built-ins" \
