--- a/rules
+++ b/rules
@@ -93,7 +93,7 @@ confflags += \
 	     --with-builderstring="$(SOURCE_NAME) $(SOURCE_VERSION) ($(BUILDER))" \
 	     --with-xkb-path=/usr/share/X11/xkb \
 	     --with-xkb-output=/var/lib/xkb \
-	     --disable-builddocs \
+	     --disable-devel-docs \
 	     --disable-install-libxf86config \
 	     --enable-mitshm \
 	     --enable-xres \
